# velodyne_ws

./: .gitignore  README.md  cloud1D_inliers.pcd  demo
bagfiles/: README.md
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
logs/lidar_sp/: build.make.000.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.045.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  build.make.050.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.054.log.stderr  build.make.055.log.stderr
logs/velodyne_pointcloud/: build.make.000.log.stderr
src/lidar_sp/: CMakeLists.txt  package.xml
src/lidar_sp/src/: a1.cpp  a1.h  a2.cpp  a2_helper.cpp  a3.cpp  lidar_sp.cpp
src/velodyne_visualizer/: CMakeLists.txt  README.md  display.rviz  display1.rviz  (+2 more)
(+129 files in other folders)
